# DevoBot

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
assets/: course_notes.txt
src/: bot.py  settings.py
